reformatted/added css, added cards

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -57,10 +57,11 @@ button:focus-visible {
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
+    :root {
+        color: #213547;
+        background-color: #f5f5f5e8;
+      
+    }
   a:hover {
     color: #747bff;
   }
