--- a/app/src/SelectedUser.css
+++ b/app/src/SelectedUser.css
@@ -1,31 +1,63 @@
-﻿.selected-user-container {
+﻿.container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    align-content: center;
+   
+}
+
+.selected-user-container {
     padding: 50px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    background-color: #f9f9f961;
+    min-width: 50%;
+    margin-right: 10px;
+    align-items: center;
 }
+
+
+.circle {
+    width: 200px;
+    height: 145px;
+    border-radius: 50%;
+    background-color: #B6D770;
+    display: inline-flex;
+ 
+}
+
 
 .customer-health-heading {
     font-size: 24px;
     margin-bottom: 10px;
+    font-weight: 300;
+    line-height: 48px;
+    position: relative;
+    top: -50px;
+    float: left;
+    height: 50%;
+    left: 0%;
+    text-transform: uppercase;
 }
+
+.my-breadcrumbs {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 48px;
+    clear: both;
+    left: 0%;
+    top: -75px;
+    position: relative;
+}
+
+
 
 .parent-user-text {
     font-size: 18px;
     margin-bottom: 20px;
 }
 
-.customer-health-heading {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-.parent-user-text {
-    margin-bottom: 20px;
-}
 
 /* Fake data table just for visualization*/
 .data-table {
@@ -52,4 +84,3 @@
         background-color: #ddd;
     }
 
-  
