--- a/app/src/pages/UserPage.css
+++ b/app/src/pages/UserPage.css
@@ -31,20 +31,32 @@
     text-transform: capitalize;
 }
 
+.my-breadcrumbs {
+    padding-left: 10px;
+    padding-top: 10px;
+    text-transform: capitalize;
+
+}
+
 
 .card {
     width: 25%;
     max-width: 500px;
     height: 300px;
-    border-radius: 8px;
-    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-    background-color: green;
+    border-radius: 15px;
+    box-shadow: 10px 10px 10px rgba(2, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     margin: auto;
     margin-top: 24px;
     margin-bottom: 24px;
-    overflow: hidden; 
+    overflow: hidden;
+}
+
+.card .content {
+    margin: auto;
+    border-radius: 30px;
+  
 }
 
 @media screen and (max-width: 768px) {
@@ -61,24 +73,41 @@
     }
 }
 
+.card .card-info {
+    display: flex;
+    justify-content: center;
+    color: #000000ad;
+}
+
 
 .media {
     height: 250px;
     object-fit: cover;
 }
 
-.title {
-    font-weight: 600;
-    margin-bottom: 8px;
+.card .title {
+    font-weight: 200;
+    font-size: 30px;
+    margin-bottom: 0;
+    text-align: center;
+    color: #4c4c4c;
 }
 
-.subtitle {
-    color: #757575;
-    margin-bottom: 16px;
+
+.chart-card {
+    height: 400px;
+    border-radius: 8px;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+    background-color: green;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 24px;
+    overflow: hidden;
+    margin-left: 60px;
 }
 
-.description {
-    flex-grow: 1;
-    margin-bottom: 16px;
+.chart-card .media {
+    height: 500px;
 }
-
