--- a/app/src/ParentUserTable.css
+++ b/app/src/ParentUserTable.css
@@ -1,9 +1,20 @@
-﻿.parent-table {
-    max-width: 75%;
+﻿
+
+.table-container {
     margin: 0 auto;
+    max-width: 75%;
+    text-align: center;
+    padding: 20px;
     overflow-x: auto;
 }
 
+.toggle-button {
+    display: flex;
+    justify-content: center;
+    float:right;
+    margin-top: -25px;
+    
+}
 
 .table-header {
     font-size: 10px;
@@ -40,49 +51,4 @@
     color: #333;
     margin-top: 2rem;
     margin-bottom: 3rem;
-}
-
-.toggle-button {
-    margin: auto 0;
-}
-
-.toggle-switch {
-    position: relative;
-    display: inline-flex;
-    width: 50px;
-    height: 25px;
-    background-color: #ccc;
-    border-radius: 25px;
-    transition: background-color 0.2s;
-    cursor: pointer;
-    margin: 0 auto;
-}
-
-    .toggle-switch.on {
-        background-color: #B6D770;
-   
-        left:200px;
-    }
-
-    .toggle-switch.off {
-        background-color: #B6D770;
-       
-        left: 200px;
-    }
-
-.toggle-switch-text {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 14px;
-    white-space: nowrap;
-    font-weight: bold;
-    color: #000;
-    transition: transform 0.2s;
-    transform: translateX(${props => props.excludeZeros ? '25px' : '0'});
 }
