css, few minor changes

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -8,5 +8,5 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
-    background-color: #b7b7b75e;
+    background-color: #f1f1f1;
 }
