--- a/app/src/pages/UserPage.css
+++ b/app/src/pages/UserPage.css
@@ -22,13 +22,14 @@
 }
 
 .customer-health-heading {
-    font-size: 35px;
+    font-size: 50px;
     color: #333;
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 20px;
     text-align: left;
     text-transform: capitalize;
+
 }
 
 .my-breadcrumbs {
@@ -127,6 +128,8 @@
     margin-left: auto;
     padding: 50px;
     text-align: center;
+    border-radius: 20px;
+    box-shadow: 2px 2px 1px -1px rgba(0,0,0,0.2), 0px 2px 2px 2px rgb(90 86 86 / 14%), 2px 2px 3px 2px rgb(98 77 77 / 12%);
 }
 
 .survey-graph {
@@ -134,4 +137,6 @@
     margin-left: 30px;
     padding: 50px;
     text-align: center;
+    border-radius: 20px;
+    box-shadow: 2px 2px 1px -1px rgba(0,0,0,0.2), 0px 2px 2px 2px rgb(90 86 86 / 14%), 2px 2px 3px 2px rgb(98 77 77 / 12%);
 }
