onclick removed, added auto focus for now

--- a/app/src/pages/UserPage.css
+++ b/app/src/pages/UserPage.css
@@ -120,7 +120,7 @@
     flex-direction: row;
     margin-top: 20px;
     margin-bottom: 24px;
-
+    // margin-left: 80px;
 }
 
 .testimonial-graph {
