--- a/app/src/pages/UserPage.css
+++ b/app/src/pages/UserPage.css
@@ -24,7 +24,8 @@
 .customer-health-heading {
     font-size: 50px;
     color: #333;
-    padding: 10px;
+    padding: 50px;
+    padding-top: 10px;
     border-radius: 5px;
     margin-bottom: 20px;
     text-align: left;
@@ -33,15 +34,15 @@
 }
 
 .my-breadcrumbs {
-    padding-left: 10px;
-    padding-top: 10px;
+    padding-left: 50px;
+    padding-top: 30px;
     text-transform: capitalize;
 
 }
 
 
 .card {
-    width: 25%;
+    width: calc(33.33% - 24px);
     max-width: 400px;
     height: 300px;
     border-radius: 15px;
@@ -49,8 +50,8 @@
     display: flex;
     flex-direction: column;
     margin: auto;
-    margin-top: 24px;
-    margin-bottom: 24px;
+    margin-top: 16px;
+    margin-bottom: 16px;
     overflow: hidden;
 }
 
@@ -77,7 +78,7 @@
 .card .card-info {
     display: flex;
     justify-content: center;
-    color: #000000ad;
+    color: #96be3e;
 }
 
 
@@ -120,7 +121,6 @@
     flex-direction: row;
     margin-top: 20px;
     margin-bottom: 24px;
-    // margin-left: 80px;
 }
 
 .testimonial-graph {
@@ -130,6 +130,14 @@
     text-align: center;
     border-radius: 20px;
     box-shadow: 2px 2px 1px -1px rgba(0,0,0,0.2), 0px 2px 2px 2px rgb(90 86 86 / 14%), 2px 2px 3px 2px rgb(98 77 77 / 12%);
+}
+
+.testimonial-graph h1 {
+    font-weight:lighter;
+}
+
+.survey-graph h1 {
+    font-weight: lighter;
 }
 
 .survey-graph {
