--- a/app/src/pages/UserPage.css
+++ b/app/src/pages/UserPage.css
@@ -1,20 +1,4 @@
-﻿.container {
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-
-}
-
-.selected-user-container {
-    padding: 50px;
-    border-radius: 8px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    background-color: #f9f9f961;
-    min-width: 50%;
-    margin-right: 10px;
-    align-items: center;
-}
-
+﻿
 .parent-user-text {
     font-size: 28px;
     margin-bottom: 20px;
@@ -22,129 +6,117 @@
 }
 
 .customer-health-heading {
-    font-size: 50px;
+    font-size: 60px;
+    font-weight: lighter;
+    letter-spacing: 0.1rem;
     color: #333;
     padding: 50px;
-    padding-top: 10px;
+    padding-top: 50px;
     border-radius: 5px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     text-align: left;
     text-transform: capitalize;
 
 }
+.user-nav {
+    background-color: #96be3e1f;
+}
+
 
 .my-breadcrumbs {
     padding-left: 50px;
     padding-top: 30px;
     text-transform: capitalize;
-
-}
-
-
-.card {
-    width: calc(33.33% - 24px);
-    max-width: 400px;
-    height: 300px;
-    border-radius: 15px;
-    box-shadow: 10px 10px 10px rgba(2, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    margin-top: 16px;
-    margin-bottom: 16px;
-    overflow: hidden;
-}
-
-.card .content {
-    margin: auto;
-    border-radius: 30px;
   
 }
 
-@media screen and (max-width: 768px) {
-    .card {
-        max-width: 300px;
-        height: 250px; 
-    }
-}
 
-@media screen and (max-width: 480px) {
-    .card {
-        max-width: 200px;
-        height: 200px;  
-    }
-}
-
-.card .card-info {
+.card-container {
     display: flex;
     justify-content: center;
-    color: #96be3e;
+    gap: 2rem;
 }
 
+.card {
+        width: calc(33.33% - 24px);
+        max-width: 400px;
+        height: 300px;
+        border-radius: 15px;
+        box-shadow: 10px 10px 10px rgba(2, 0, 0, 0.1);
+        display: flex;
+        flex-direction: column;
+        margin: 2%;
+        margin-top: 30px;
+        margin-bottom: 2%;
+        overflow: hidden;
 
-.media {
-    height: 250px;
-    object-fit: cover;
-}
+    }
 
-.card .title {
-    font-weight: 200;
-    font-size: 30px;
-    margin-bottom: 0;
-    text-align: center;
-    color: #4c4c4c;
-}
+        .card .content {
+            margin: auto;
+            border-radius: 30px;
+        }
+
+    @media screen and (max-width: 780px) {
+        .card {
+            max-width: 300px;
+            height: 250px;
+            margin-top: 4%;
+            margin-bottom: 4%;
+            margin: auto;
+            background-color: red;
+        }
+    }
+
+    @media screen and (max-width: 480px) {
+        .card {
+            max-width: 200px;
+            height: 200px;
+            margin-top: 6%;
+            margin-bottom: 6%;
+        }
+    }
+
+    .card .card-info {
+        display: flex;
+        justify-content: center;
+        color: #96be3e;
+    }
 
 
-.chart-card {
-    height: 400px;
-    border-radius: 8px;
-    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-    background-color: green;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    margin-top: 50px;
-    margin-bottom: 24px;
-    overflow: hidden;
-    margin-left: 60px;
-}
+    .media {
+        height: 250px;
+        object-fit: cover;
+    }
 
-.chart-card .media {
-    height: 500px;
-}
+    .card .title {
+        font-weight: 200;
+        font-size: 30px;
+        margin-bottom: 0;
+        text-align: center;
+        color: #4c4c4c;
+    }
 
-.test-graph {
-    width: 50%;
-    padding: 40px;
-    display: flex;
-    flex-direction: row;
-    margin-top: 20px;
-    margin-bottom: 24px;
-}
+    .test-graph {
+        width: 50%;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+        gap: 40px;
+    }
 
-.testimonial-graph {
-    background: #fbfbfb;
-    margin-left: auto;
-    padding: 50px;
-    text-align: center;
-    border-radius: 20px;
-    box-shadow: 2px 2px 1px -1px rgba(0,0,0,0.2), 0px 2px 2px 2px rgb(90 86 86 / 14%), 2px 2px 3px 2px rgb(98 77 77 / 12%);
-}
+    .testimonial-graph,
+    .survey-graph {
+        background: #fbfbfb;
+        padding: 50px;
+        text-align: center;
+        border-radius: 20px;
+        box-shadow: 2px 2px 1px -1px rgba(0,0,0,0.2), 0px 2px 2px 2px rgb(90 86 86 / 14%), 2px 2px 3px 2px rgb(98 77 77 / 12%);
+    }
 
-.testimonial-graph h1 {
-    font-weight:lighter;
-}
+        .testimonial-graph h1,
+        .survey-graph h1 {
+            font-weight: lighter;
+        }
 
-.survey-graph h1 {
-    font-weight: lighter;
-}
 
-.survey-graph {
-    background: #fbfbfb;
-    margin-left: 30px;
-    padding: 50px;
-    text-align: center;
-    border-radius: 20px;
-    box-shadow: 2px 2px 1px -1px rgba(0,0,0,0.2), 0px 2px 2px 2px rgb(90 86 86 / 14%), 2px 2px 3px 2px rgb(98 77 77 / 12%);
-}
